--- a/gptspeaks/src/style.css
+++ b/gptspeaks/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to right, blue, red);
+    background: linear-gradient(to right, rgb(255, 255, 255), rgb(141, 141, 141));
   }
 
 .frontPageContent{
@@ -35,4 +35,21 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.button{
+    margin: 10px;
+}
+
+#record-button {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+}
+  
+#record-button:hover {
+    background-color: darkred;
 }
