--- a/gptspeaks/src/style.css
+++ b/gptspeaks/src/style.css
@@ -30,7 +30,14 @@ body {
     text-align: center;
 }
 
-.regLogForm{
+.regForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.logForm{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,4 +105,9 @@ body {
 
 .logo{
     width: 40px;
+}
+
+.link{
+    color: blue;
+    text-decoration: none;
 }
